--- a/game.css
+++ b/game.css
@@ -1,12 +1,50 @@
+html{
+		-webkit-box-sizing: border-box;
+		        box-sizing: border-box;
+}
 body {
      background: url(background.jpg);
-     background-size: cover;
+     -webkit-background-size: cover;
+             background-size: cover;
      overflow: hidden;
      cursor: url("harrycursor.png"), auto;	
-
+     height: 100vh;
+     width: 100vw;
 }
+
+.wrapper{
+	display: -ms-grid;
+	display: grid;
+	-ms-grid-columns: 1fr 2fr;
+	grid-template-columns: 1fr 2fr;
+	    grid-template-areas: 
+	'left right';
+}
+
+.left{
+	 position: relative;
+	display: -ms-grid;
+	display: grid;
+	-ms-grid-columns: auto;
+	grid-template-columns: auto;
+	-ms-grid-rows: 1fr 1fr 1fr 2fr;
+	grid-template-rows: 1fr 1fr 1fr 2fr;
+	    grid-template-areas: 
+	'top'
+	'middle'
+	'button'
+	'bottom';
+}
+
 /*The game container*/
 .game-container{
+	-ms-grid-row: 1;
+	-ms-grid-column: 2;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	grid-area: right;
 	display: -ms-grid;
 	display: grid;
 	background-color: hsl(180, 100%, 13%, 0.6);
@@ -16,8 +54,6 @@ body {
 	grid-gap: 10px;
 	padding: 30px 30px;
 	width: 790px;
-	margin-left: 550px;
-	margin-top: -868px;
 	border-radius: 15px;
    -webkit-perspective: 1000px;
            perspective: 1000px;
@@ -35,6 +71,7 @@ body {
 	font-size: 15px;
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
+	        -webkit-align-items: center;
 	        align-items: center;
 	margin: auto;
 	border-radius: 10px;
@@ -67,6 +104,7 @@ body {
 	height: 100px;
 	 -webkit-box-align: center;
 	     -ms-flex-align: center;
+	         -webkit-align-items: center;
 	         align-items: center;
 	  margin-left: -50px;
 	  margin-top: -30px;
@@ -80,6 +118,7 @@ body {
 	height: 100px;
 	 -webkit-box-align: center;
 	     -ms-flex-align: center;
+	         -webkit-align-items: center;
 	         align-items: center;
 	  margin-left: -50px;
 	  margin-top: -30px;
@@ -102,16 +141,24 @@ body {
 
 /*The Sorting Hat */
 .hat img {
+	-ms-grid-row: 4;
+	-ms-grid-column: 1;
+	display: block;
+	position: relative; 
+	grid-area: bottom;
 	 background-repeat: no-repeat;
 	 height: 350px;
 	 width: 330px;
-	 margin-top: 300px;
-	 margin-left: 20px;
 	 position: left;
+	 margin-top: 50px;
 }
 
 /*Speech Bubble*/
 .bubble {
+	-ms-grid-row: 2;
+	-ms-grid-column: 1;
+	display: block;
+	grid-area: middle;
     background-color: #f8f8f8;
     border: 1px solid #c8c8c8;
     border-radius: 5px;
@@ -119,8 +166,8 @@ body {
     height: 80px;
     text-align: center;
     padding: 20px;
+    margin-top: -70px;
     position: absolute;
-    margin-top: 150px;
     margin-left: 140px;
 }
 .bubble .arrow {
@@ -158,16 +205,21 @@ margin-left: 50px;
  }
 /*The restart button*/
 button {
+	-ms-grid-row: 3;
+	-ms-grid-column: 1;
+	display: block;
+	grid-area: button;
 	background-image: url("papirus.jpg");
 	font-family: 'Smythe', cursive;
 	width: 150px;
 	height: 50px;
 	font-size: 35px;
-	margin-left: 130px;
-	margin-top:-50px;
 	border-radius: 10px;
 	border: 1px solid black;
+	margin-top: -600px;
+	margin-left: 120px;
 }
+
 
 button:hover{
    -webkit-box-shadow: 0 0 50px rgba(33,33,33,.4);
@@ -177,4 +229,152 @@ button:hover{
 /*Music*/
 iframe{
 	visibility: hidden;
+}
+/*====================MEDIA QUERIES=======================*/
+@media (min-width: 1024px) and (max-width: 1280px) {
+  
+.game-container{
+		grid-gap: 5px;
+	padding: 10px 10px;
+	width: 500px;
+	margin-left: 40px;
+}
+.card {
+	background-image: url(papirus.jpg);
+	color: black;
+	text-align: center;
+	margin-top: 10px;
+	padding: 50px;
+	width: 10px;
+	height: 10px;
+}
+
+.card .back {
+	width: 80px;
+	height: 80px;
+	  margin-left: -40px;
+	  margin-top: -40px;
+	 }
+.card .front {
+	width:80px;
+	height: 80px;
+	  margin-left: -40px;
+	  margin-top: -40px;
+}
+
+  .hat img {
+	-ms-grid-row: 4;
+	-ms-grid-column: 1;
+	display: block;
+	position: relative; 
+	grid-area: bottom;
+	 background-repeat: no-repeat;
+	 height: 250px;
+	 width: 230px;
+	 position: left;
+	 margin-top: 40px;
+	 margin-left: -5px;
+}
+
+.bubble {
+    width: 150px;
+    height: 50px;
+
+}
+button {
+	-ms-grid-row: 3;
+	-ms-grid-column: 1;
+	display: block;
+	grid-area: button;
+	background-image: url("papirus.jpg");
+	font-family: 'Smythe', cursive;
+	width: 100px;
+	height: 40px;
+	font-size: 25px;
+	border-radius: 10px;
+	border: 1px solid black;
+	margin-top: -430px;
+	margin-left: 160px;
+}
+header img{
+height: 200px;
+margin-left: 10px;
+
+ }
+  #mess {
+	font-size: 25px;
+}
+
+}
+
+@media screen and (max-width: 1400px) , screen and (max-height: 800px) {
+
+.game-container{
+		grid-gap: 1px;
+	padding: 10px 10px;
+	width: 600px;
+	height: 590px;
+	margin-left: 20px;
+}
+.card {
+	background-image: url(papirus.jpg);
+	color: black;
+	text-align: center;
+	margin-top: 10px;
+	padding: 55px;
+	width: 10px;
+	height: 10px;
+}
+
+.card .back {
+	width:90px;
+	height: 90px;
+	  margin-left: -45px;
+	  margin-top: -40px;
+	 }
+
+.card .front {
+	width:90px;
+	height: 90px;
+    margin-left: -45px;
+	margin-top: -40px;
+}
+
+  .hat img {
+	-ms-grid-row: 4;
+	-ms-grid-column: 1;
+	display: block;
+	position: relative; 
+	grid-area: bottom;
+	 background-repeat: no-repeat;
+	 height: 230px;
+	 width: 220px;
+	 position: left;
+	 margin-top: 70px;
+	 margin-left: 50px;
+}
+
+.bubble {
+	margin-top: -40px;
+    width: 190px;
+    height: 50px;
+        margin-left: 80px;
+}
+
+button {
+	font-size: 25px;
+	width: 100px;
+	height: 40px;
+	margin-top: -450px;
+	margin-left: 170px;
+}
+header img{
+margin-top: -10px;
+margin-left: 10px;
+
+ }
+ #mess {
+	font-size: 25px;
+}
+
 }
